--- a/_posts/2016-01-23-day-4.md
+++ b/_posts/2016-01-23-day-4.md
@@ -14,4 +14,4 @@ title:  Day 4
 
 - Sarawak Report, an 'investigative journalism' news site, founded by a British journalist named Clare Rewcastle Brown (who is the sister-in-law of former United Kingdom Prime Minister Gordon Brown) based in London, England, tweeted:
 
-<blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr">Has <a href="https://twitter.com/hashtag/Malaysia?src=hash">#Malaysia</a> now blocked <a href="https://twitter.com/Medium">@Medium</a> after <a href="https://twitter.com/sarawak_report">@sarawak_report</a> &amp; <a href="https://twitter.com/asiasentinel">@asiasentinel</a>? Will Malaysia turn into North Korea for <a href="https://twitter.com/NajibRazak">@NajibRazak</a>&#39;s sake? <a href="https://twitter.com/hashtag/1MDB?src=hash">#1MDB</a></p>&mdash; Sarawak Report (@sarawak_report) <a href="https://twitter.com/sarawak_report/status/690809153527377921">January 23, 2016</a></blockquote></li>
+<blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr">Has <a href="https://twitter.com/hashtag/Malaysia?src=hash">#Malaysia</a> now blocked <a href="https://twitter.com/Medium">@Medium</a> after <a href="https://twitter.com/sarawak_report">@sarawak_report</a> &amp; <a href="https://twitter.com/asiasentinel">@asiasentinel</a>? Will Malaysia turn into North Korea for <a href="https://twitter.com/NajibRazak">@NajibRazak</a>&#39;s sake? <a href="https://twitter.com/hashtag/1MDB?src=hash">#1MDB</a></p>&mdash; Sarawak Report (@sarawak_report) <a href="https://twitter.com/sarawak_report/status/690809153527377921">January 23, 2016</a></blockquote>
