--- a/_posts/2016-01-24-day-5.md
+++ b/_posts/2016-01-24-day-5.md
@@ -7,5 +7,5 @@ title:  Day 5
 
 <blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr">Is <a href="https://t.co/7yXlo0wtaY">https://t.co/7yXlo0wtaY</a> still blocked in Malaysia or can you access the site again ?</p>&mdash; Sarawak Report (@sarawak_report) <a href="https://twitter.com/sarawak_report/status/691279431227305984">January 24, 2016</a></blockquote>
 
-- Users switching to third-party Domain Name System (DNS) services (e.g. Google Public DNS) to bypass the block on [Medium.com](https://medium.com){:target="_blank"} &amp; whistleblower site [Sarawak Report](http://sarawakreport.org){:target="_blank"}
+- Users switching to third-party Domain Name System (DNS) services (e.g. Google Public DNS) to bypass the block on [Medium.com](https://medium.com) &amp; whistleblower site [Sarawak Report](http://sarawakreport.org)
 - Malaysians on Twitter poured out their creative-humor and maintaining cool, the good ole Malaysian way
