--- a/_posts/2016-01-26-day-7.md
+++ b/_posts/2016-01-26-day-7.md
@@ -3,7 +3,7 @@ layout: post
 title:  Day 7
 ---
 
-- No press statement or news in regards to the Medium.com block by MCMC/SKMM 
+- No press statement or news in regards to the Medium.com block by MCMC/SKMM, as pointed out by @hafidzbaharom a columnist for The Malaysian Insider:
 
 <center>
 <blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr"><a href="https://twitter.com/SKMM_MCMC">@SKMM_MCMC</a> has blocked access for <a href="https://twitter.com/Medium">@Medium</a> in Malaysia. Any press statement on this issue?</p>&mdash; Hafidz Baharom (@hafidzbaharom) <a href="https://twitter.com/hafidzbaharom/status/691848983023636480">January 26, 2016</a></blockquote>
