--- a/_posts/2016-01-20-day-1.md
+++ b/_posts/2016-01-20-day-1.md
@@ -5,6 +5,10 @@ title:  Day 1
 
 - Malaysian Communications And Multimedia Commission (MCMC) contacted Medium via Electronic mail, requesting to remove a post/report made by London, England based Whistleblower, Sarawak Report 
 
-- The article in question was [Najib Negotiates His Exit BUT He Wants Safe Passage AND All The Money! EXCLUSIVE DISCLOSURE](https://medium.com/@sarawakreport/najib-negotiates-his-exit-but-he-wants-safe-passage-and-all-the-money-exclusive-disclosure-8d7d44343b50) by Sarawak Report &mdash; as per what was written by the Medium Legal Team on their official post [The Post Stays Up](https://medium.com/medium-legal/the-post-stays-up-d222e34cb7e7)
+- The article in question is <a href="https://medium.com/@sarawakreport/najib-negotiates-his-exit-but-he-wants-safe-passage-and-all-the-money-exclusive-disclosure-8d7d44343b50" target="_blank">Najib Negotiates His Exit BUT He Wants Safe Passage AND All The Money! EXCLUSIVE DISCLOSURE</a> by Sarawak Report &mdash; as per what was written by the Medium Legal Team on their official post <a href="https://medium.com/medium-legal/the-post-stays-up-d222e34cb7e7" target="_blank">The Post Stays Up</a>
 
-- The Electronic mail content, as per "The Post Stays Up" article: <img src="/img/medium-legal-01.png" class="img-responsive img-border" data-action="zoom">	
+<center>
+<a class="m-story" data-collapsed="true" href="https://medium.com/@sarawakreport/najib-negotiates-his-exit-but-he-wants-safe-passage-and-all-the-money-exclusive-disclosure-8d7d44343b50">Najib Negotiates His Exit BUT He Wants Safe Passage AND All The Money! EXCLUSIVE DISCLOSURE</a>
+</center>
+
+- The Electronic mail content, as per "The Post Stays Up" post: <img src="/img/medium-legal-01.png" class="img-responsive img-border" data-action="zoom">
