--- a/_posts/2016-01-21-day-2.md
+++ b/_posts/2016-01-21-day-2.md
@@ -3,5 +3,10 @@ layout: post
 title:  Day 2
 ---
 
-- Medium Legal Team responded to Malaysian Communications And Multimedia Commission (MCMC) with the following, posted on post on their platform (Medium.com) [The Post Stays Up](https://medium.com/medium-legal/the-post-stays-up-d222e34cb7e7)
-<img src="img/medium-legal-02.png" class="img-responsive img-border" data-action="zoom">
+- Medium Legal Team responded to Malaysian Communications And Multimedia Commission (MCMC) with the following, posted on post on their platform (Medium.com) <a href="https://medium.com/medium-legal/the-post-stays-up-d222e34cb7e7" target="_blank">The Post Stays Up</a>
+
+<center>
+<script async src="https://static.medium.com/embed.js"></script><a class="m-story" data-collapsed="true" href="https://medium.com/medium-legal/the-post-stays-up-d222e34cb7e7">The Post Stays Up</a>
+</center>
+
+<img src="/img/medium-legal-02.png" class="img-responsive img-border" data-action="zoom">
