--- a/_posts/2016-01-23-day-4.md
+++ b/_posts/2016-01-23-day-4.md
@@ -3,13 +3,7 @@ layout: post
 title:  Day 4
 ---
 
-- A Twitter user, who goes by the username @soulchild___ tweeted: 
-
-<center>
-<blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr">Malaysia ISP blocked <a href="https://twitter.com/Medium">@Medium</a> .... what the hell?!</p>&mdash; Soulchild (@soulchild___)</blockquote>
-</center>
-
-- The tweets did not stop there. Many were certainly angry and frustrated; some shocked that a social blogging platform which is used my many would get blocked
+- On Twitter, many were certainly angry and frustrated; some shocked that a social blogging platform which is used my many would get blocked
 - Twitter user Muhammad Ikhwan @mxwan tweeted the following with a screen image by Amy Ng (@pikaland). The image shows the good ole "argh! damnit!" landing page, which confirmed that it was indeed a local ISP DNS-level block: 
 
 <center>
