--- a/_posts/2016-01-24-day-5.md
+++ b/_posts/2016-01-24-day-5.md
@@ -3,6 +3,13 @@ layout: post
 title:  Day 5
 ---
 
-- Whistleblower Sarawak Report tweeted asked </i>Is Medium.com still blocked in Malaysia or can you access the site again ?</i>
+- Whistleblower Sarawak Report tweeted asking whether the issue with Medium.com still persist: 
+
+<center>
+<blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr">Is <a href="https://t.co/7yXlo0wtaY">https://t.co/7yXlo0wtaY</a> still blocked in Malaysia or can you access the site again ?</p> &mdash; Sarawak Report (@sarawak_report) <a href="https://twitter.com/sarawak_report/status/691279431227305984">January 24, 2016</a></blockquote>
+</center>
+
 - Users switching to third-party Domain Name System (DNS) services (e.g. Google Public DNS) to bypass the block on <a href="https://medium.com" target="_blank">Medium.com</a> &amp; whistleblower site <a href="http://sarawakreport.org" target="_blank">Sarawak Report</a>
 - Malaysians on Twitter poured out their creative-humor and maintaining cool, the good ole Malaysian way
+
+
