--- a/_posts/2016-01-26-day-7.md
+++ b/_posts/2016-01-26-day-7.md
@@ -9,5 +9,5 @@ title:  Day 7
 <blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr"><a href="https://twitter.com/SKMM_MCMC">@SKMM_MCMC</a> has blocked access for <a href="https://twitter.com/Medium">@Medium</a> in Malaysia. Any press statement on this issue?</p>&mdash; Hafidz Baharom (@hafidzbaharom) <a href="https://twitter.com/hafidzbaharom/status/691848983023636480">January 26, 2016</a></blockquote>
 </center> 
 
-- Featured on Tech In Asia [Some users report Medium is blocked in Malaysia](https://www.techinasia.com/medium-blocked-malaysia-sarawak)
-- Featured on MetaFilter [Medium allegedly blocked in Malaysia](http://www.metafilter.com/156622/Medium-allegedly-blocked-in-Malaysia)
+- Featured on Tech In Asia <a href="https://www.techinasia.com/medium-blocked-malaysia-sarawak" target="_blank">Some users report Medium is blocked in Malaysia</a>
+- Featured on MetaFilter <a href="http://www.metafilter.com/156622/Medium-allegedly-blocked-in-Malaysia" target="_blank">Medium allegedly blocked in Malaysia</a>
