--- a/_posts/2016-01-27-day-8.md
+++ b/_posts/2016-01-27-day-8.md
@@ -28,5 +28,5 @@ title:  Day 8
 - Azira Aziz (@ladymissazira), a Malaysian Lawyer, left a comment on the 'The Post Stays Up' by Medium Legal' post:
 
 <center>
-<script async src="https://static.medium.com/embed.js"></script><a class="m-story" data-collapsed="true" href="https://medium.com/@ladymissazira/thank-you-for-upholding-freedom-of-expression-online-where-we-malaysians-would-otherwise-suffer-1064f184ce2d">Thank you for upholding freedom of expression online, where we Malaysians would otherwise suffer…</a>
+<a class="m-story" data-collapsed="true" href="https://medium.com/@ladymissazira/thank-you-for-upholding-freedom-of-expression-online-where-we-malaysians-would-otherwise-suffer-1064f184ce2d">Thank you for upholding freedom of expression online, where we Malaysians would otherwise suffer…</a>
 </center>
