--- a/_posts/2016-01-28-day-9.md
+++ b/_posts/2016-01-28-day-9.md
@@ -15,3 +15,22 @@ title:  Day 9
 - Featured on Malaysia Chronicle <a href="http://www.malaysia-chronicle.com/index.php?option=com_k2&view=item&id=610291:you-cant-bully-everyone-mediumcom-ticks-off-mcmc-sarawak-reports-post-on-najib-stays-despite-ban&Itemid=2" target="_blank">YOU CAN'T BULLY EVERYONE: Medium.com ticks off MCMC - Sarawak Report's post on Najib stays despite ban</a>
 - The Executive Director for Lawyers for Liberty Malaysia (a human rights lawyers’ organisation), Eric Paulsen released a Press Statement titled <a href="http://www.lawyersforliberty.org/lfl-undemocratic-and-counterproductive-to-block-critical-websites-and-blogs/" target="_blank">Undemocratic and counterproductive to block critical websites and blogs</a>
 - Featured on MalaysiaKini: <a href="https://www.malaysiakini.com/news/328615" target="_blank">LFL slams MCMC's 'heavy-handed' blocking of websites</a>
+- The tweets and re-tweets kept coming. People and robots from around the world shared, some advising on how to bypass the block by using Virtual Private Network (VPN) and thrid-party DNS 
+- Twitter user Tom Chantler ‏@TomChantler tweeted a link to his article in regards to privacy and using Virtual Private Network (VPN) to bypass the block in Malaysia
+
+<center>
+<blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr">In <a href="https://twitter.com/hashtag/Malaysia?src=hash">#Malaysia</a> and want to access <a href="https://twitter.com/Medium">@Medium</a> or <a href="https://twitter.com/sarawak_report">@sarawak_report</a>? You could use a personal VPN. Here&#39;s how: <a href="https://t.co/dE6ow3HmZb">https://t.co/dE6ow3HmZb</a></p>&mdash; Tom Chantler (@TomChantler) <a href="https://twitter.com/TomChantler/status/692629369794203648">January 28, 2016</a></blockquote>
+</center>
+
+- Users across the World are disgusted by the block by the Malaysian Government. Dr. Roy Schestowitz @schestowitz tweeted:
+
+<center>
+<blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr">By blocking the whole of <a href="https://twitter.com/hashtag/Medium?src=hash">#Medium</a> the regime of <a href="https://twitter.com/hashtag/Malaysia?src=hash">#Malaysia</a> has just ensured that every single Malaysian citizen will see what&#39;s being blocked</p>&mdash; Dr. Roy Schestowitz (@schestowitz) <a href="https://twitter.com/schestowitz/status/692706967232593920">January 28, 2016</a></blockquote>
+</center>
+
+- Users offering assistance and linking articles on how to bypass the block, changing DNS and utilizing a VPN service. A ton of them.
+- Featured on Engadget <a href="http://www.engadget.com/2016/01/28/malaysia-medium-block-explainer/" target="_blank">Why has Malaysia blocked Medium?</a>
+
+<center>
+<blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr">Why has Malaysia blocked Medium? <a href="https://t.co/oea5Q33NuT">https://t.co/oea5Q33NuT</a> <a href="https://t.co/e2PwuxT8Ve">pic.twitter.com/e2PwuxT8Ve</a></p>&mdash; Engadget (@engadget) <a href="https://twitter.com/engadget/status/692735894969786368">January 28, 2016</a></blockquote>
+</center>
