--- a/_posts/2016-01-28-day-9.md
+++ b/_posts/2016-01-28-day-9.md
@@ -22,7 +22,7 @@ title:  Day 9
 <blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr">In <a href="https://twitter.com/hashtag/Malaysia?src=hash">#Malaysia</a> and want to access <a href="https://twitter.com/Medium">@Medium</a> or <a href="https://twitter.com/sarawak_report">@sarawak_report</a>? You could use a personal VPN. Here&#39;s how: <a href="https://t.co/dE6ow3HmZb">https://t.co/dE6ow3HmZb</a></p>&mdash; Tom Chantler (@TomChantler) <a href="https://twitter.com/TomChantler/status/692629369794203648">January 28, 2016</a></blockquote>
 </center>
 
-- Users across the World are disgusted by the block by the Malaysian Government. Dr. Roy Schestowitz @schestowitz tweeted:
+- Users across the World are disgusted by the block of Medium.com in Malaysia &mdash; Dr. Roy Schestowitz @schestowitz tweeted:
 
 <center>
 <blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr">By blocking the whole of <a href="https://twitter.com/hashtag/Medium?src=hash">#Medium</a> the regime of <a href="https://twitter.com/hashtag/Malaysia?src=hash">#Malaysia</a> has just ensured that every single Malaysian citizen will see what&#39;s being blocked</p>&mdash; Dr. Roy Schestowitz (@schestowitz) <a href="https://twitter.com/schestowitz/status/692706967232593920">January 28, 2016</a></blockquote>
