--- a/_posts/2016-01-29-day-10.md
+++ b/_posts/2016-01-29-day-10.md
@@ -3,7 +3,7 @@ layout: post
 title:  Day 10
 ---
 
-- Retweets and mirroring of Engadget' article in regards to the block has not stopped. Feed robots and spammers contributing too
+- Retweets and mirrors of Engadget' news article in regards to the block of Medium in Malaysia has not stopped. Feed robots and spammers doing their bit by 'retweeting' too
 - Most Malaysians feel the same as Xiang Zhi Tan ‏@xiangzhitan &mdash; he tweeted: 
 
 <center>
@@ -25,3 +25,8 @@ title:  Day 10
 <blockquote class="twitter-tweet" lang="en"><p lang="de" dir="ltr">Blog-Plattform Medium in Malaysia gesperrt, weil sie Inhalte nicht löschen wollte: <a href="https://t.co/zVjR6YG4j2">https://t.co/zVjR6YG4j2</a></p>&mdash; netzpolitik (@netzpolitik) <a href="https://twitter.com/netzpolitik/status/693041925486678016">January 29, 2016</a></blockquote>
 </center>
   
+- Many expressing disappointment, why and so did Chua Soon Hau @chuasoonhau, he tweeted:
+
+<center>
+<blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr">Malaysia, the way you handled this is unprofessional. I’m dissapointed with my country. <a href="https://t.co/zbZz6dguCD">https://t.co/zbZz6dguCD</a></p>&mdash; Chua Soon Hau (@chuasoonhau) <a href="https://twitter.com/chuasoonhau/status/693088081960767488">January 29, 2016</a></blockquote>
+</center>
