--- a/_posts/2016-01-29-day-10.md
+++ b/_posts/2016-01-29-day-10.md
@@ -16,8 +16,8 @@ title:  Day 10
 <blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr">Malaysian censors have blocked all of Medium: <a href="https://t.co/hnmOnOti6H">https://t.co/hnmOnOti6H</a></p>&mdash; EFF (@EFF) <a href="https://twitter.com/EFF/status/692866083561148417">January 29, 2016</a></blockquote>
 </center> 
 
-- Featured on Reddit's '/r/programming' subreddit section <a href="https://www.reddit.com/r/programming/comments/4369dk/mediums_sitewide_encryption_confronts_censorship/" target="_blank">Medium's Sitewide Encryption Confronts Censorship in Malaysia</a>
-- Featured on Reddit's '/r/technology' subreddit section <a href="https://www.reddit.com/r/technology/comments/436afz/mediums_sitewide_encryption_confronts_censorship/" target="_blank">Medium's Sitewide Encryption Confronts Censorship in Malaysia</a> 
+- Featured on Reddit '/r/programming' subreddits section <a href="https://www.reddit.com/r/programming/comments/4369dk/mediums_sitewide_encryption_confronts_censorship/" target="_blank">Medium's Sitewide Encryption Confronts Censorship in Malaysia</a>
+- Featured on Reddit '/r/technology' subreddits section <a href="https://www.reddit.com/r/technology/comments/436afz/mediums_sitewide_encryption_confronts_censorship/" target="_blank">Medium's Sitewide Encryption Confronts Censorship in Malaysia</a> 
 - Featured on Malaysia Chronicle <a href="http://www.malaysia-chronicle.com/index.php?option=com_k2&view=item&id=610327:how-do-we-know-youre-telling-the-truth--not-sarawak-report-the-post-stays-up-medium-tells-najib--co&Itemid=2" target="_blank">Medium Unconvinced Of Najib's Innocence: How Do We Know You're Telling The Truth &amp; Not Sarawak Report - The Post Stays Up </a>
 - Featured on Berlin-based netzpolitik.org (German Language) <a href="https://netzpolitik.org/2016/blog-plattform-medium-in-malaysia-gesperrt-weil-sie-inhalte-nicht-loeschen-wollte-we-stand-by-investigative-journalists/" target="_blank">Blog-Plattform Medium in Malaysia gesperrt, weil sie Inhalte nicht löschen wollte: "We stand by investigative journalists"</a>
 
@@ -25,7 +25,7 @@ title:  Day 10
 <blockquote class="twitter-tweet" lang="en"><p lang="de" dir="ltr">Blog-Plattform Medium in Malaysia gesperrt, weil sie Inhalte nicht löschen wollte: <a href="https://t.co/zVjR6YG4j2">https://t.co/zVjR6YG4j2</a></p>&mdash; netzpolitik (@netzpolitik) <a href="https://twitter.com/netzpolitik/status/693041925486678016">January 29, 2016</a></blockquote>
 </center>
   
-- Many expressing disappointment, why and so did Chua Soon Hau @chuasoonhau, he tweeted:
+- Many expressing disappointment, why and so did Chua Soon Hau @chuasoonhau &mdash; he tweeted:
 
 <center>
 <blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr">Malaysia, the way you handled this is unprofessional. I’m dissapointed with my country. <a href="https://t.co/zbZz6dguCD">https://t.co/zbZz6dguCD</a></p>&mdash; Chua Soon Hau (@chuasoonhau) <a href="https://twitter.com/chuasoonhau/status/693088081960767488">January 29, 2016</a></blockquote>
