--- a/_posts/2016-01-29-day-10.md
+++ b/_posts/2016-01-29-day-10.md
@@ -3,7 +3,7 @@ layout: post
 title:  Day 10
 ---
 
-- Retweets and mirrors of Engadget' news article in regards to the block of Medium in Malaysia has not stopped. Feed robots and spammers doing their bit by 'retweeting' too
+- Retweets and mirrors of Engadget' news article in regards to the block of Medium in Malaysia has not stopped. Feed robots and spammers doing their bit by twetting about it (how kind of them)
 - Most Malaysians feel the same as Xiang Zhi Tan ‏@xiangzhitan &mdash; he tweeted: 
 
 <center>
