--- a/_posts/2016-01-30-day-11.md
+++ b/_posts/2016-01-30-day-11.md
@@ -3,7 +3,7 @@ layout: post
 title:  Day 11
 ---
 	
-- Karen Cheung @karenklcheung a journalist for Hong Kong Free Press, had this to say: 
+- Karen Cheung @karenklcheung a journalist for Hong Kong Free Press &amp; a Law student, had this to say: 
 
 <center>
 <blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr">Malaysia blocking Medium, even when China hasn&#39;t. <a href="https://t.co/DUI4EmQxUr">https://t.co/DUI4EmQxUr</a></p>&mdash; Karen Cheung (@karenklcheung) <a href="https://twitter.com/karenklcheung/status/693104692457418752">January 29, 2016</a></blockquote>
