Update Facebook Embed Post

--- a/_posts/2016-01-25-day-6.md
+++ b/_posts/2016-01-25-day-6.md
@@ -6,7 +6,8 @@ title:  Day 6
 - Whistleblower Sarawak Report released a Press Release via their official Facebook account, titled: <a href="https://www.facebook.com/sarawakreport/posts/1241838005843000" target="_blank">Press Statement - MALAYSIAN PM CLOSES DOWN FREE INTERNET TO SILENCE CORRUPTION ALLEGATIONS</a>
 
 <center>
-<div id="fb-root"></div><script>(function(d, s, id) {  var js, fjs = d.getElementsByTagName(s)[0];  if (d.getElementById(id)) return;  js = d.createElement(s); js.id = id;  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3";  fjs.parentNode.insertBefore(js, fjs);}(document, 'script', 'facebook-jssdk'));</script><div class="fb-post" data-href="https://www.facebook.com/sarawakreport/posts/1241838005843000" data-width="500"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/sarawakreport/posts/1241838005843000"><p>Press Statement - MALAYSIAN PM CLOSES DOWN FREE INTERNET TO SILENCE CORRUPTION ALLEGATIONSThe Malaysian Government has...</p>Posted by <a href="https://www.facebook.com/sarawakreport/">Sarawak Report</a> on&nbsp;<a href="https://www.facebook.com/sarawakreport/posts/1241838005843000">Sunday, January 24, 2016</a></blockquote></div></div>
+<script src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&amp;version=v2.2" async></script>  
+<div class="fb-post" data-href="https://www.facebook.com/sarawakreport/posts/1241838005843000" data-width="500"></div>
 </center>
 
 - Featured on Malaysia Chronicle <a href="http://www.malaysia-chronicle.com/index.php?option=com_k2&view=item&id=610089:all-eyes-national--international-on-najib-sue-us-if-we-are-lying-about-you-swak-report-dares-msian-pm" target="_blank">Why Such Dirty Tactics: Najib Gets Tongue Lashing Of His Life For Blocking Online Accusations Of His Corruption</a>
