--- a/_posts/2016-01-25-day-6.md
+++ b/_posts/2016-01-25-day-6.md
@@ -3,6 +3,6 @@ layout: post
 title:  Day 6
 ---
 
-- Whistleblower Sarawak Report released a Press Release via their official Facebook account, titled: <a href="https://www.facebook.com/sarawakreport/posts/1241838005843000" target="_blank">Press Statement - MALAYSIAN PM CLOSES DOWN FREE INTERNET TO SILENCE CORRUPTION ALLEGATIONS</a>
+- Whistleblower Sarawak Report released a 'Press Release' via their official Facebook account, titled: <a href="https://www.facebook.com/sarawakreport/posts/1241838005843000" target="_blank">Press Statement - MALAYSIAN PM CLOSES DOWN FREE INTERNET TO SILENCE CORRUPTION ALLEGATIONS</a>
 - Featured on Malaysia Chronicle <a href="http://www.malaysia-chronicle.com/index.php?option=com_k2&view=item&id=610089:all-eyes-national--international-on-najib-sue-us-if-we-are-lying-about-you-swak-report-dares-msian-pm" target="_blank">Why Such Dirty Tactics: Najib Gets Tongue Lashing Of His Life For Blocking Online Accusations Of His Corruption</a>
 - Featured on HackerNews platform <a href="https://news.ycombinator.com/item?id=10967734" target="_blank">Malaysia Blocked Medium.com (Goodbye Free Internet)</a>
