Added: Quartz (qz.com)

--- a/_posts/2016-01-28-day-9.md
+++ b/_posts/2016-01-28-day-9.md
@@ -34,3 +34,5 @@ title:  Day 9
 <center>
 <blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr">Why has Malaysia blocked Medium? <a href="https://t.co/oea5Q33NuT">https://t.co/oea5Q33NuT</a> <a href="https://t.co/e2PwuxT8Ve">pic.twitter.com/e2PwuxT8Ve</a></p>&mdash; Engadget (@engadget) <a href="https://twitter.com/engadget/status/692735894969786368">January 28, 2016</a></blockquote>
 </center>
+
+- Featured on Quartz (qz.com): <a href="http://qz.com/604868/how-malaysias-prime-minister-has-stifled-critics-opponents-and-the-press/" target="_blank">How Malaysia’s prime minister has stifled critics, opponents, and the press</a>
