--- a/_posts/2016-01-29-day-10.md
+++ b/_posts/2016-01-29-day-10.md
@@ -30,3 +30,12 @@ title:  Day 10
 <center>
 <blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr">Malaysia, the way you handled this is unprofessional. I’m dissapointed with my country. <a href="https://t.co/zbZz6dguCD">https://t.co/zbZz6dguCD</a></p>&mdash; Chua Soon Hau (@chuasoonhau) <a href="https://twitter.com/chuasoonhau/status/693088081960767488">January 29, 2016</a></blockquote>
 </center>
+
+- The Global Investigative Journalism Network &amp; Transparency International tweeted with the Engadget article link:
+
+<center>
+<blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr">Why has <a href="https://twitter.com/hashtag/Malaysia?src=hash">#Malaysia</a> blocked Medium? Over a single article posted by investigative journalism site <a href="https://twitter.com/sarawak_report">@sarawak_report</a> <a href="https://t.co/hLy5QiQiXx">https://t.co/hLy5QiQiXx</a></p>&mdash; GIJN (@gijn) <a href="https://twitter.com/gijn/status/693009833864368132">January 29, 2016</a></blockquote>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+<blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr">.<a href="https://twitter.com/Medium">@Medium</a> blocked in <a href="https://twitter.com/hashtag/Malaysia?src=hash">#Malaysia</a> after <a href="https://twitter.com/sarawak_report">@sarawak_report</a> reports on <a href="https://twitter.com/hashtag/Najib?src=hash">#Najib</a> 1MDB <a href="https://twitter.com/hashtag/corruption?src=hash">#corruption</a> scandal. Why? <a href="https://twitter.com/hashtag/timeforjustice?src=hash">#timeforjustice</a> <a href="https://t.co/zmsRHmfQUZ">https://t.co/zmsRHmfQUZ</a></p>&mdash; Transparency Int&#39;l (@anticorruption) <a href="https://twitter.com/anticorruption/status/693012989830656000">January 29, 2016</a></blockquote>
+</center>
