--- a/_posts/2016-01-29-day-10.md
+++ b/_posts/2016-01-29-day-10.md
@@ -31,7 +31,7 @@ title:  Day 10
 <blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr">Malaysia, the way you handled this is unprofessional. I’m dissapointed with my country. <a href="https://t.co/zbZz6dguCD">https://t.co/zbZz6dguCD</a></p>&mdash; Chua Soon Hau (@chuasoonhau) <a href="https://twitter.com/chuasoonhau/status/693088081960767488">January 29, 2016</a></blockquote>
 </center>
 
-- The Global Investigative Journalism Network &amp; Transparency International tweeted with the Engadget article link:
+- The Global Investigative Journalism Network @gijn &amp; Transparency International @anticorruption tweeted with the Engadget article link:
 
 <center>
 <blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr">Why has <a href="https://twitter.com/hashtag/Malaysia?src=hash">#Malaysia</a> blocked Medium? Over a single article posted by investigative journalism site <a href="https://twitter.com/sarawak_report">@sarawak_report</a> <a href="https://t.co/hLy5QiQiXx">https://t.co/hLy5QiQiXx</a></p>&mdash; GIJN (@gijn) <a href="https://twitter.com/gijn/status/693009833864368132">January 29, 2016</a></blockquote>
