--- a/_posts/2016-01-28-day-9.md
+++ b/_posts/2016-01-28-day-9.md
@@ -6,7 +6,7 @@ title:  Day 9
 - Featured on Techdirt: <a href="https://www.techdirt.com/articles/20160127/06323233440/medium-stands-up-to-malaysias-attempt-to-take-down-investigative-reporting-gets-entire-site-blocked-malaysia.shtml" target="_blank">Medium Stands Up To Malaysia's Attempt To Take Down Investigative Reporting; Gets Entire Site Blocked In Malaysia</a>
 - Featured on Fortune: <a href="http://fortune.com/2016/01/27/medium-malaysia-block/?utm_campaign=Contact+SNS+For+More+Referrer&utm_medium=twitter&utm_source=snsanalytics" target="_blank">Medium Has Been Blocked In Malaysia</a>
 - Featured on MalaysiaKini: <a href="https://www.malaysiakini.com/news/328522" target="_blank">Medium.com: Sarawak Report's post on Najib stays despite ban</a>
-- MalaysiaKini News Portal reports that four other 'local blogs' in Malaysia had been blocked by MCMC/SKMM <a href="https://www.malaysiakini.com/news/328530" target="_blank">Four more websites blocked by MCMC</a>. The blogs are as follows:-
+- MalaysiaKini News Portal reported that four other 'local blogs' in Malaysia had been blocked by MCMC/SKMM <a href="https://www.malaysiakini.com/news/328530" target="_blank">Four more websites blocked by MCMC</a>. The blogs are as follows:-
 	- syedsoutsidethebox.blogspot.my
 	- tabunginsider.blogspot.my
 	- jinggo-fotopages.blogspot.my
