--- a/_posts/2016-01-29-day-10.md
+++ b/_posts/2016-01-29-day-10.md
@@ -39,3 +39,9 @@ title:  Day 10
 
 <blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr">.<a href="https://twitter.com/Medium">@Medium</a> blocked in <a href="https://twitter.com/hashtag/Malaysia?src=hash">#Malaysia</a> after <a href="https://twitter.com/sarawak_report">@sarawak_report</a> reports on <a href="https://twitter.com/hashtag/Najib?src=hash">#Najib</a> 1MDB <a href="https://twitter.com/hashtag/corruption?src=hash">#corruption</a> scandal. Why? <a href="https://twitter.com/hashtag/timeforjustice?src=hash">#timeforjustice</a> <a href="https://t.co/zmsRHmfQUZ">https://t.co/zmsRHmfQUZ</a></p>&mdash; Transparency Int&#39;l (@anticorruption) <a href="https://twitter.com/anticorruption/status/693012989830656000">January 29, 2016</a></blockquote>
 </center>
+
+- Malaysian citizens doing their best to get Medium.com site unblocked. Twitter user Yuen-Chi Lian @yclian tweeted:
+
+<center>
+<blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr">This page calls for Malaysian internet users to demand <a href="https://twitter.com/SKMM_MCMC">@SKMM_MCMC</a> and ISPs to <a href="https://twitter.com/hashtag/UnblockMedium?src=hash">#UnblockMedium</a>: <a href="https://t.co/f5ThbM64kO">https://t.co/f5ThbM64kO</a></p>&mdash; YC Lian (@yclian) <a href="https://twitter.com/yclian/status/692896680623013888">January 29, 2016</a></blockquote>
+</center>
