--- a/_posts/2016-01-31-day-12.md
+++ b/_posts/2016-01-31-day-12.md
@@ -4,3 +4,9 @@ title:  Day 12
 ---
 	
 - Twitter user Long Yong Chong @LongYC a Software Developer wrote on his blog <a href="http://longyc.com/2016/01/medium-is-blocked-in-malaysia/" target="_blank">Medium Is Blocked In Malaysia (And why every Malaysians should be concerned)</a> 
+
+- Elizabeth Murray @DeadlinesDirect a Journalist and Researcher had something to say about the site-wide block on Medium.com in Malaysia on a 'quote tweet' of an article written by Independent.com titled <a href="http://www.independent.co.uk/news/world/asia/malaysia-investigated-by-swiss-authorities-for-corruption-and-bribery-a6844231.html" target="_blank">Malaysia investigated by Swiss authorities for corruption and bribery (Swiss authorities are examining the accounts of a state investment fund)</a>
+
+<center>
+<blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr">Hello, what&#39;s this?! Malaysia banned <a href="https://twitter.com/Medium">@Medium</a> over a related story. They stuck by the story &amp; now it grows. RT <a href="https://t.co/BoCd6B7BMP">https://t.co/BoCd6B7BMP</a></p>&mdash; Elizabeth Murray (@DeadlinesDirect) <a href="https://twitter.com/DeadlinesDirect/status/693741032572264448">January 31, 2016</a></blockquote>
+</center>
