--- a/_posts/2016-01-24-day-5.md
+++ b/_posts/2016-01-24-day-5.md
@@ -5,4 +5,4 @@ title:  Day 5
 
 - Whistleblower Sarawak Report tweeted asking: <i>Is Medium.com still blocked in Malaysia or can you access the site again?</i>
 - Users switching to third-party Domain Name System (DNS) services (e.g. Google Public DNS) to bypass the block on <a href="https://medium.com" target="_blank">Medium.com</a> &amp; whistleblower site <a href="http://sarawakreport.org" target="_blank">Sarawak Report</a>
-- Malaysians on Twitter poured out their creative-humor and maintaining cool, the good ole Malaysian way
+- Malaysians on Twitter poured out their creative-humor while maintaining cool, the good ole Malaysian way
