--- a/_posts/2016-01-23-day-4.md
+++ b/_posts/2016-01-23-day-4.md
@@ -10,7 +10,7 @@ title:  Day 4
 <blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr">WTF why did they block medium com?! <a href="https://twitter.com/hashtag/Malaysia?src=hash">#Malaysia</a> <a href="https://twitter.com/hashtag/Medium?src=hash">#Medium</a> <a href="https://t.co/ZAsDHxHedH">pic.twitter.com/ZAsDHxHedH</a></p>&mdash; Ikhwan (@mxwan) <a href="https://twitter.com/mxwan/status/690664172007206912">January 22, 2016</a></blockquote>
 </center>
 
-- Sarawak Report, an 'investigative journalism' news site, founded by a British journalist named Clare Rewcastle Brown (who is the sister-in-law of former United Kingdom Prime Minister Gordon Brown) based in London, England, tweeted:
+- Sarawak Report, an 'investigative journalism' news site, founded by a British journalist, Clare Rewcastle Brown (who is the sister-in-law of former United Kingdom Prime Minister Gordon Brown) based in London, England, tweeted:
 
 <center>
 <blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr">Has <a href="https://twitter.com/hashtag/Malaysia?src=hash">#Malaysia</a> now blocked <a href="https://twitter.com/Medium">@Medium</a> after <a href="https://twitter.com/sarawak_report">@sarawak_report</a> &amp; <a href="https://twitter.com/asiasentinel">@asiasentinel</a>? Will Malaysia turn into North Korea for <a href="https://twitter.com/NajibRazak">@NajibRazak</a>&#39;s sake? <a href="https://twitter.com/hashtag/1MDB?src=hash">#1MDB</a></p>&mdash; Sarawak Report (@sarawak_report) <a href="https://twitter.com/sarawak_report/status/690809153527377921">January 23, 2016</a></blockquote>
