--- a/_posts/2016-01-27-day-8.md
+++ b/_posts/2016-01-27-day-8.md
@@ -25,6 +25,14 @@ title:  Day 8
 - Featured on The Star Online Malaysia: <a href="http://www.thestar.com.my/tech/tech-news/2016/01/27/mcmc-blocks-medium/" target="_blank">MCMC blocks Medium</a>
 - Featured on International Press Institute (IPT): <a href="http://www.freemedia.at/newssview/article/malaysia-blocks-medium-for-not-complying-with-request-to-remove-investigative-news-story.html" target="_blank">Malaysia blocks Medium for not complying with request to remove investigative news story</a>
 - Featured on TechRaptor: <a href="http://techraptor.net/content/medium-blocked-in-malaysia-over-investigative-journalism" target="_blank">Medium Blocked in Malaysia Over Investigative Journalism</a>
+- Featured on Malaysia's Lowyat.net <a href="http://www.lowyat.net/2016/93548/mcmc-blocks-medium-for-allowing-sarawak-report-post/" target="_blank">MCMC Blocks Medium For Allowing Sarawak Report Post</a> 
+- Featured on KLGadget.com <a href="http://www.klgadgetguy.com/news/2016/1/27/mcmc-blocks-access-to-medium" target="_blank">MCMC blocks access to Medium</a> 
+- David Beard ‏@dabeard the Executive Editor at Public Radio International (pri.org) tweeted: 
+
+<center>
+<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Malaysia blocks <a href="https://twitter.com/Medium">@Medium</a> after it refuses to pull story on Saudi funding scandal &amp; the nation&#39;s attorney general. <a href="https://t.co/5Pq8jZZbsj">https://t.co/5Pq8jZZbsj</a></p>&mdash; David Beard (@dabeard) <a href="https://twitter.com/dabeard/status/692341895960379393">January 27, 2016</a></blockquote>
+</center>
+
 - Azira Aziz (@ladymissazira), a Malaysian Lawyer, left a comment on the 'The Post Stays Up' by Medium Legal' post:
 
 <center>
