--- a/_posts/2016-01-29-day-10.md
+++ b/_posts/2016-01-29-day-10.md
@@ -45,3 +45,7 @@ title:  Day 10
 <center>
 <blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr">This page calls for Malaysian internet users to demand <a href="https://twitter.com/SKMM_MCMC">@SKMM_MCMC</a> and ISPs to <a href="https://twitter.com/hashtag/UnblockMedium?src=hash">#UnblockMedium</a>: <a href="https://t.co/f5ThbM64kO">https://t.co/f5ThbM64kO</a></p>&mdash; YC Lian (@yclian) <a href="https://twitter.com/yclian/status/692896680623013888">January 29, 2016</a></blockquote>
 </center>
+
+
+- Featured on MarTech Advisor <a href="http://www.martechadvisor.com/news/medium-recently-banned-in-malaysia-introduces-three-new-features-for-publishers/" target="_blank">Medium, Recently Banned in Malaysia, Introduces Three New Features for Publishers</a> 
+- Featured on Free Malaysia Today <a href="http://www.freemalaysiatoday.com/category/nation/2016/01/29/mcmc-blocks-medium-for-posting-swak-report-article/" target="_blank">MCMC blocks Medium for posting S’wak Report article</a> 
