--- a/_posts/2016-02-01-day-13.md
+++ b/_posts/2016-02-01-day-13.md
@@ -4,7 +4,7 @@ title:  Day 13
 ---
 	
 - Medium.com still remains blocked in Malaysia. The tech-savvy ones have switched to third-party DNS, since the Medium.com block in Malaysia is a DNS-level block
-- Nothing from Malaysian Communications And Multimedia Commission (MCMC). Quite -mum- at this point
+- Nothing from Malaysian Communications And Multimedia Commission (MCMC) nor Medium Legal. Quite -mum- at this point
 - Arianna Ariff @arriannariff tweeted something in regards to the contents on Medium.com:
 
 <center>
