--- a/_posts/2016-01-20-day-1.md
+++ b/_posts/2016-01-20-day-1.md
@@ -12,3 +12,5 @@ title:  Day 1
 </center>
 
 - The Electronic mail content, as per "The Post Stays Up" post: <img src="/img/medium-legal-01.png" class="img-responsive img-border" data-action="zoom">
+
+- <a href="http://www.themalaymailonline.com/malaysia/article/putrajaya-seeks-to-plug-loophole-on-website-block-with-mcmc-revision" target="_blank">Putrajaya seeks to plug loophole on website block with MCMC revision</a> via The Malay Mail Online
