--- a/_posts/2016-01-30-day-11.md
+++ b/_posts/2016-01-30-day-11.md
@@ -9,4 +9,9 @@ title:  Day 11
 <blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr">Malaysia blocking Medium, even when China hasn&#39;t. <a href="https://t.co/DUI4EmQxUr">https://t.co/DUI4EmQxUr</a></p>&mdash; Karen Cheung (@karenklcheung) <a href="https://twitter.com/karenklcheung/status/693104692457418752">January 29, 2016</a></blockquote>
 </center>
 
-- Featured on Reddit 'r/worldnews' subreddits section <a href="https://www.reddit.com/r/worldnews/comments/43aku2/mediums_sitewide_encryption_confronts_censorship/" target="_blank">Medium's Sitewide Encryption Confronts Censorship in Malaysia</a> 
+- Featured on Reddit 'r/worldnews' subreddits section <a href="https://www.reddit.com/r/worldnews/comments/43aku2/mediums_sitewide_encryption_confronts_censorship/" target="_blank">Medium's Sitewide Encryption Confronts Censorship in Malaysia</a>
+- Posted on the <a href="https://www.facebook.com/UnblockMedium" target="_blank">Unblock Medium</a> Facebook Community, user Long Yc posted his chat script with his ISP customer service agent &mdash; inquiring about the access to Medium.com: 
+
+<center>
+<div id="fb-root"></div><script>(function(d, s, id) {  var js, fjs = d.getElementsByTagName(s)[0];  if (d.getElementById(id)) return;  js = d.createElement(s); js.id = id;  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3";  fjs.parentNode.insertBefore(js, fjs);}(document, 'script', 'facebook-jssdk'));</script><div class="fb-post" data-href="https://www.facebook.com/UnblockMedium/posts/1725020777711070" data-width="500"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/UnblockMedium/posts/1725020777711070"><p>One of our supporters brought this to his ISP! If every of us here does the same, there is a better chance that we will...</p>Posted by <a href="https://www.facebook.com/UnblockMedium/">Unblock Medium</a> on&nbsp;<a href="https://www.facebook.com/UnblockMedium/posts/1725020777711070">Friday, January 29, 2016</a></blockquote></div></div>
+</center>
