--- a/_posts/2016-01-31-day-12.md
+++ b/_posts/2016-01-31-day-12.md
@@ -10,3 +10,8 @@ title:  Day 12
 <center>
 <blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr">Hello, what&#39;s this?! Malaysia banned <a href="https://twitter.com/Medium">@Medium</a> over a related story. They stuck by the story &amp; now it grows. RT <a href="https://t.co/BoCd6B7BMP">https://t.co/BoCd6B7BMP</a></p>&mdash; Elizabeth Murray (@DeadlinesDirect) <a href="https://twitter.com/DeadlinesDirect/status/693741032572264448">January 31, 2016</a></blockquote>
 </center>
+
+- A TechCrunch, Asia-based writer Jon Russell @jonrussell who writes about Technology in Asia, wrote <a href="http://techcrunch.com/2016/01/31/southeast-asia-censorsh1t/?ncid=rss&utm_source=feedburner&utm_medium=feed&utm_campaign=Feed%3A+Techcrunch+%28TechCrunch%29&sr_share=twitter" target="_blank">Online Censorship Rears Its Ugly Head In Southeast Asia</a> on techcrunch.com &mdash; he talks about Indonesia blocking out Netflix (Internet straming media) and shines a light on Malaysia blocking Medium.com
+
+> It look the latter choice, so now the publishing platform is no longer available in the country. Quite absurd. &mdash; TechCrunch.com
+
