--- a/_posts/2016-02-04-day-16.md
+++ b/_posts/2016-02-04-day-16.md
@@ -3,7 +3,7 @@ layout: post
 title:  Day 16
 ---
 
-- Malaysian Communications and Multimedia Commission (MCMC/SKMM) Minister Salleh Said Keruak defended the blocking of the blog-publishing platform Medium.com which had been blocked since January 2016 by several local ISPs on MCMC's request. He mentions that Medium.com "broken Malaysian law" and that it is a “false news detrimental to national security”
+- Malaysian Communications and Multimedia Commission (MCMC/SKMM) Minister <a href="https://en.wikipedia.org/wiki/Salleh_Said_Keruak" target="_blank">Salleh Said Keruak</a> defended the blocking of the blog-publishing platform Medium.com which had been blocked since January 2016 by several local ISPs on MCMC's request. He mentioned that Medium.com "broken Malaysian law" and that it is a “false news detrimental to national security”
 
 - As per <a href="https://medium.com/medium-legal/the-post-stays-up-d222e34cb7e7" target="_blank">The Post Stays Up</a> post by Medium Legal team on January 27th: 
 
@@ -14,3 +14,9 @@ title:  Day 16
 - Featured on Free Malaysia Today <a href="http://www.freemalaysiatoday.com/category/nation/2016/02/04/salleh-explains-defending-his-pm-najib-razak/" target="_blank">Salleh explains why he defends Najib</a>
 
 - Featured on Malaysia Chronicle <a href="http://www.malaysia-chronicle.com/index.php?option=com_k2&view=item&id=610594:mediumcom-broke-the-law-malaysias-scandal-plagued-regime-vows-greater-online-clampdowns&Itemid=2" target="_blank">Medium.com Broke The Law', Malaysia's Scandal-plagued Regime Vows Greater Online Clampdowns</a> 
+
+- Besides the block of Medium.com, there are two online news sites and one Whistleblower site that still remains blocked by the Malaysia Government, Malaysian Communications and Multimedia Commission (MCMC/SKMM)
+
+	- www.malaysia-chronicle.com
+	- www.asiasentinel.com
+	- www.sarawakreport.org
