--- a/_posts/2016-02-04-day-16.md
+++ b/_posts/2016-02-04-day-16.md
@@ -3,9 +3,9 @@ layout: post
 title:  Day 16
 ---
 
-- Malaysian Communications and Multimedia Commission (MCMC/SKMM) Minister <a href="https://en.wikipedia.org/wiki/Salleh_Said_Keruak" target="_blank">Salleh Said Keruak</a> defended the blocking of the blog-publishing platform Medium.com which had been blocked since January 2016 by several local ISPs on MCMC's request. He mentioned that Medium.com "broken Malaysian law" and that it is a “false news detrimental to national security”
+- Malaysian Communications and Multimedia Commission (MCMC/SKMM) Minister <a href="https://en.wikipedia.org/wiki/Salleh_Said_Keruak" target="_blank">Salleh Said Keruak</a> defended the blocking of the blog-publishing platform Medium.com which had been blocked since January 2016 by several local ISPs on MCMC's request. He mentioned that Medium.com "broken Malaysian law" and that it is carying “false news detrimental to national security”, allude to Sarawak Report's article on the Malaysian Prime Minister 
 
-- As per <a href="https://medium.com/medium-legal/the-post-stays-up-d222e34cb7e7" target="_blank">The Post Stays Up</a> post by Medium Legal team on January 27th: 
+- As per <a href="https://medium.com/medium-legal/the-post-stays-up-d222e34cb7e7" target="_blank">The Post Stays Up</a> by Medium Legal team on January 27th: 
 
 > We stand by investigative journalists who publish on Medium. Until we receive an order from a court of competent jurisdiction, the post stays up. &mdash; Medium Legal
 
@@ -15,8 +15,14 @@ title:  Day 16
 
 - Featured on Malaysia Chronicle <a href="http://www.malaysia-chronicle.com/index.php?option=com_k2&view=item&id=610594:mediumcom-broke-the-law-malaysias-scandal-plagued-regime-vows-greater-online-clampdowns&Itemid=2" target="_blank">Medium.com Broke The Law', Malaysia's Scandal-plagued Regime Vows Greater Online Clampdowns</a> 
 
-- Besides the block of Medium.com, there are two online news sites and one Whistleblower site that still remains blocked by the Malaysia Government, Malaysian Communications and Multimedia Commission (MCMC/SKMM)
+- Besides the block of Medium.com, there are two online news sites and one Whistleblower site that still remains blocked by the Malaysian Government, Malaysian Communications and Multimedia Commission (MCMC/SKMM)
 
 	- www.malaysia-chronicle.com
 	- www.asiasentinel.com
 	- www.sarawakreport.org
+	
+- Featured on MalaysiaKini <a href="https://www.malaysiakini.com/news/329337" target="_blank">Minister defends blocking medium.com, says it broke law</a> 
+	
+- Quote from by the MCMC Minister Salleh Said Keruak via MalaysiaKini news portal:
+
+> "The decision to block medium.com was due to the fact it continued to carry false news that is detrimental to the national security of the country, even though a request to remove the said news item was issued to them," he said. &mdash; MalaysiaKini	
