--- a/_posts/2016-02-04-day-16.md
+++ b/_posts/2016-02-04-day-16.md
@@ -23,6 +23,6 @@ title:  Day 16
 	
 - Featured on MalaysiaKini <a href="https://www.malaysiakini.com/news/329337" target="_blank">Minister defends blocking medium.com, says it broke law</a> 
 	
-- Quote from by the MCMC Minister Salleh Said Keruak via MalaysiaKini news portal:
+- Quoting Malaysian Communications and Multimedia Commission (MCMC/SKMM) Minister <a href="https://en.wikipedia.org/wiki/Salleh_Said_Keruak" target="_blank">Salleh Said Keruak</a> via MalaysiaKini news portal post:
 
-> "The decision to block medium.com was due to the fact it continued to carry false news that is detrimental to the national security of the country, even though a request to remove the said news item was issued to them," he said. &mdash; MalaysiaKini	
+> "The decision to block medium.com was due to the fact it continued to carry false news that is detrimental to the national security of the country, even though a request to remove the said news item was issued to them," he said.
