--- a/_posts/2016-02-04-day-16.md
+++ b/_posts/2016-02-04-day-16.md
@@ -3,7 +3,7 @@ layout: post
 title:  Day 16
 ---
 
-- Malaysian Communications and Multimedia Commission (MCMC/SKMM) Minister <a href="https://en.wikipedia.org/wiki/Salleh_Said_Keruak" target="_blank">Salleh Said Keruak</a> defended the blocking of the blog-publishing platform Medium.com which had been blocked since January 2016 by several local ISPs on MCMC's request. He mentioned that Medium.com "broken Malaysian law" and that it is carying “false news detrimental to national security”, allude to Sarawak Report's article on the Malaysian Prime Minister 
+- Malaysian Communications and Multimedia Commission (MCMC/SKMM) Minister <a href="https://en.wikipedia.org/wiki/Salleh_Said_Keruak" target="_blank">Salleh Said Keruak</a> defended the blocking of the blog-publishing platform Medium.com which had been blocked since January 2016 by several local ISPs on MCMC's request. He mentioned that Medium.com "broken Malaysian law" and that it is carrying “false news detrimental to national security”, allude to Sarawak Report's article on the Malaysian Prime Minister 
 
 - Minister Salleh Said Keruak added:
 
