--- a/_posts/2016-02-05-day-17.md
+++ b/_posts/2016-02-05-day-17.md
@@ -8,3 +8,9 @@ title:  Day 17
 	- On February 4th 2016 (Day 16), the Malaysian Communications and Multimedia Commission (MCMC/SKMM) Minister Salleh Said Keruak &mdash; he said:
 
 	> "The decision to block medium.com was due to the fact it continued to carry false news that is detrimental to the national security of the country, even though a request to remove the said news item was issued to them," &mdash; Salleh Said Keruak via Malaysiakini
+	
+- A former Singapore AFP (news agency) journalist and a current Economics and Political Science student, Bhavan Jaipragas @jbhavan tweeted:
+
+<center>
+<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr"><a href="https://t.co/UqhAuv14gP">https://t.co/UqhAuv14gP</a> banned in <a href="https://twitter.com/hashtag/Malaysia?src=hash">#Malaysia</a> over <a href="https://twitter.com/NajibRazak">@NajibRazak</a>, <a href="https://twitter.com/hashtag/1MDB?src=hash">#1MDB</a> stories. Sad, the world is watching as the country sinks into an abyss.</p>&mdash; Bhavan Jaipragas (@jbhavan) <a href="https://twitter.com/jbhavan/status/695411627672219648">February 5, 2016</a></blockquote>
+</center>
