--- a/_posts/2016-01-28-day-9.md
+++ b/_posts/2016-01-28-day-9.md
@@ -36,3 +36,5 @@ title:  Day 9
 </center>
 
 - Featured on Quartz (qz.com): <a href="http://qz.com/604868/how-malaysias-prime-minister-has-stifled-critics-opponents-and-the-press/" target="_blank">How Malaysia’s prime minister has stifled critics, opponents, and the press</a>
+
+- Featured on Sarawak Report <a href="http://www.sarawakreport.org/2016/01/1mdb-reporting-has-all-been-vindicated-so-how-come-the-growing-media-crackdown-in-malaysia/" target="_blank">1MDB Reporting Has All Been Vindicated - So How Come The Growing Media Crackdown In Malaysia?</a> 
